提交jvm虚拟机参数